<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="current_temp">72</string>
    <string name="low">Low 65°</string>
    <string name="feels_like">Feels like 78°</string>
    <string name="high">High 80°</string>
    <string name="humidity">Humidity 100%</string>
    <string name="pressure">Pressure 1023 hPa</string>
    <string name="date">Jan 31</string>
    <string name="forecastTemp">Temp: 72°</string>
    <string name="forecastHigh">High: 80°</string>
    <string name="forecastLow">Low: 65°</string>
    <string name="sunset">Sunset: 9:00pm</string>
    <string name="sunrise">Sunrise: 8:00am</string>
    <string name="forecast">FORECAST</string>
    <string name="getCurrentConditionsForLocation">Get Weather for My Location</string>


</resources>