<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/forecast_icon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:importantForAccessibility="no"
        android:src="@drawable/sun_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/forecast_icon"
        app:layout_constraintTop_toTopOf="@id/forecast_icon"
        app:layout_constraintBottom_toBottomOf="@id/forecast_icon"
        />

    <TextView
        android:id="@+id/forecastTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/forecastTemp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/date"/>

    <TextView
        android:id="@+id/forecastHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecastHigh"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/forecastTemp"
        app:layout_constraintStart_toEndOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/forecastTemp" />

    <TextView
        android:id="@+id/forecastLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2sp"
        android:text="@string/forecastLow"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/forecastHigh"
        app:layout_constraintTop_toTopOf="@id/forecastHigh"
        app:layout_constraintBottom_toBottomOf="@id/forecastHigh" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:text="@string/sunset"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/forecastLow"
        app:layout_constraintTop_toTopOf="@id/forecastLow"
        app:layout_constraintBottom_toBottomOf="@id/forecastLow" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/sunset"
        app:layout_constraintBottom_toTopOf="@id/sunset" />

</androidx.constraintlayout.widget.ConstraintLayout>